--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Tre Scott</title>
+    <title>Tre' Scott</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -63,7 +63,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Tre
+          <h1 class="mb-0">Tre'
             <span class="text-primary">Scott</span>
           </h1>
           <div class="subheading mb-5">
@@ -71,7 +71,7 @@
  -->           
             <a href="mailto:name@email.com">emailtrescott@gmail.com</a>
           </div>
-          <p class="lead mb-5"> "A creative excelling in a professional world. Tre' Scott is compassionate, opinionated, and focuses on building strong relationships. His dedication to seeing his friends' and clients' successes is palatable" - Joseph Nelson
+          <p class="lead mb-5"> "A creative excelling in a professional world. Tre' Scott is compassionate, opinionated, and focuses on building strong relationships. His dedication to seeing his friends' and clients' successes is palatable." -Joseph Nelson
           </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/trescott/">
